<resources>
    <string name="app_name">Флора и фауна</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Флора и фауна Калужской области</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">Флора и фауна</string>
    <string name="mushrooms">Грибы</string>
    <string name="flowers">Цветы</string>
    <string name="insects">Насекомые</string>
    <string name="animals">Животные</string>
    <string name="others">Разное</string>
    <string name="recipes">Рецепты</string>
    <string name="advice">Советы</string>
    <string name="boletus">
        <b>Белые</b> \n
        Белый гриб — гриб из рода Боровик.
        Название отражает свойство мякоти не изменять цвет на срезе.
        Встречается повсеместно, широко распространён;
        отличается разнообразием форм и окрасок.
        Традиционно относится к наиболее ценным съедобным грибам.
        Описание
        Шляпка зрелого гриба диаметром 7—30 см (иногда до 50 см), выпуклая,
        у старых грибов плоско-выпуклая, редко распростёртая. Поверхность гладкая
        или морщинистая, в сухую погоду может растрескиваться, голая, может быть
        тонковойлочная (особенно у края), редко волокнисто-чешуйчатая.
        Во влажную погоду поверхность слегка слизистая, в сухую матовая или блестящая.
        Цвет кожицы — от красно-коричневого до почти белого, с возрастом темнеет, может
        также быть лимонно-жёлтых, оранжевых, пурпурных тонов, часто окраска неравномерная,
        со светлыми краями, иногда с узким чисто-белым или желтоватым ободком. Кожица
        приросшая, не отделяется от мякоти. Мякоть крепкая, сочно-мясистая,
        у старых экземпляров волокнистая, белая у молодого гриба, желтеет с возрастом,
        не изменяет цвет после разрезания (крайне редко наблюдается слабое изменение
        окраски до розовой или синей), под тёмноокрашенной кожицей может быть слой бурого
        или красно-коричневого оттенка. Вкус мягкий, слабо выражен, запах сырой мякоти слабо
        различим, сильный приятный грибной запах появляется при варке и особенно при сушке.
        Ножка 8—25 см высотой (обычно до 12) и до 7 см толщиной (редко 10 и больше), массивная,
        бочковидная или булавовидная, с возрастом вытягивается и может становиться
        цилиндрической, расширенной или суженной посередине, основание часто остаётся
        утолщённым. Поверхность беловатая, коричневатая, иногда красноватая, может иметь
        тот же оттенок, что и шляпка, но более светлый. Покрыта сеточкой из белых или более
        светлых прожилок. Сеточка обычно в верхней части ножки, но может и спускаться
        до основания, значительно реже она отсутствует или слабо выражена. Трубчатый слой
        с глубокой выемкой возле ножки, легко отделяется от мякоти шляпки, светлый,
        у молодых грибов белый, позже желтеет, затем приобретает оливково-зелёный цвет,
        очень редко в молодом возрасте бывает с розовато-красным оттенком.
        Трубочки длиной 1—4 см, поры мелкие, округлые.
    </string>
<string name="girolle">
    <b>Лесички</b> \n
    Лисичка обыкновенная — вид грибов семейства лисичковых. Растет в Европе от
    Скандинавии до Средиземноморского бассейна, в основном в лиственных и хвойных лесах.
    Гриб легко обнаружить и распознать в природе. Обычно в Европе употребляемую в пищу лисичку
    собирают с конца лета до поздней осени. Лисички имеют слабый аромат и вкус абрикосов.
    Они используются во многих кулинарных блюдах и могут сохраняться путём сушки или заморозки.
    При сушке не следует использовать духовку, потому что гриб может стать горьким.
    Описание
    Плодовые тела по форме сходны со шляпконожечными, но шляпка и ножка представляют собой
    единое целое, без выраженной границы;цвет — от светло-жёлтого до оранжево-жёлтого.
    Шляпка диаметром 2—12 см, часто с волнистым краем или неправильной формы,
    вогнуто-распростёртая, выпуклая, потом вдавленная, плоская, с завёрнутыми краями и
    вдавленная в центре, у зрелых грибов до воронковидной. Поверхность шляпки гладкая, матовая.
    Кожица трудно отделяется от мякоти шляпки. Мякоть плотно-мясистая, в ножке волокнистая,
    жёлтая по краям и беловатая в середине плодового тела, с кисловатым вкусом и слабым
    запахом сушёных фруктов или кореньев. При надавливании слегка краснеет. Ножка сросшаяся
    со шляпкой и одного с ней цвета или более светлая, сплошная, плотная, гладкая,
    книзу сужается, толщиной от 1 до 3 см и длиной от 4 до 7 см. Гименофор складчатый
    (псевдопластинчатый), состоит из волнистых, часто сильно разветвлённых складок,
    сильно нисходящих по ножке. Гименофор может быть также жилковатым, грубоячеистым;
    жилки толстые, редкие (менее 10 шт./см), невысокие, походят на складки, вильчатые или нет,
    вильчато-разветвлённые, далеко нисбегающие на ножку (относится к афилофоральным грибам).
    Споровый порошок светло-жёлтого цвета, споры эллипсоидальные, 8,5 × 5 мкм.
</string>
    <string name="rose">
        <b>Розы</b> \n
        Роза — собирательное название видов и сортов представителей рода Шиповник,
        выращиваемых человеком и растущих в дикой природе. Бóльшая часть сортов
        роз получена в результате длительной селекции путём многократных повторных скрещиваний
        и отбора. Некоторые сорта являются формами дикорастущих видов.
        Описание
        Форма куста может быть от раскидистой до узкопирамидальной. Высота куста
        групп чайно-гибридных и флорибунда от 30 до 90 см; полиантовых — 30—45 см,
        некоторые сорта достигают 60 см; миниатюрные — 25—35 см. Группа плетевидных
        роз представляет собой кустарники с плетевидными, дугообразными стелющимися
        побегами от 2,5 до 6 метров длиной. У роз принято различать два типа многолетних
        ветвей — основные или маточные, ветви и ветви с законченным ростом и пять типов
        однолетних побегов — ростовые, преждевременные, жировые, генеративные и силлептические.
        Длина цветоноса у садовых роз колеблется от 10 до 80 см. Цветки роз удивляют своим
        многообразием. Их размеры колеблются от 1,8 см до 18 см, количество лепестков может
        составлять от 5 до 128, существует до десятка различных форм цветка, цветки могут
        быть как одиночные, так и в соцветиях от трёх до двухсот штук. Очень разнообразна
        цветовая гамма: нет только чисто-синих. Получен сорт зелёной розы, но он представляет
        интерес лишь для ботаников. Кроме однотонных существуют сорта роз с сочетанием окрасок,
        а также меняющие цвет в процессе цветения. Разнообразны ароматы различных видов и
        сортов роз. Кроме стандартного аромата дамасской розы, существуют розы с ароматом
        от фруктового и цитрусового до аромата благовоний и пряностей. Махровость многочисленных
        сортов культурных роз возникла в результате превращения части тычинок в
        лепестковидные стаминодии.
    </string>
    <string name="mimosa">
        <b>Мимозы</b> \n
        Мимоза  — род цветковых растений семейства Бобовые. Ранее
        это растение помещали в ныне расформированное семейство Мимозовые.
        Самый известный вид — стыдливая мимоза. Травянистое растение в 30—60 см высоты;
        двоякоперистые листья его особенно чувствительны, складываясь и опускаясь в темноте
        от самого легкого прикосновения и других раздражающих причин. Подобной же
        раздражительностью обладают и другие виды мимоз. Часто разводится
        ради украшения и физиологических опытов.
    </string>
    <string name="mice">
        <b>Мыши</b> \n
        Домовая мышь — вид грызунов рода домовых мышей.
        Благодаря своей способности к сосуществованию с человеком домовые мыши
        распространились по всему миру и являются одним из самых многочисленных видов
        млекопитающих. Мыши — модельные организмы в лабораторных исследованиях.
        Содержат их и в качестве домашних животных. Мелкий длиннохвостый грызун: длина тела
        от 6,5 до 9,5 см. Хвост составляет не менее 60 % по отношению к длине тела,
        покрыт роговыми чешуйками, расположенными кольцеобразно, и редкими короткими волосками.
        Масса — 12—30 г. Уши округлые, небольшие. Шкурка тёмная или буровато-серая;
        брюшко — от пепельно-серого до белого. У пустынных мышей окрас светлый,
        желтовато-песчаный, брюшко белое. Среди одомашненных встречаются белые, чёрные,
        жёлтые, серо-голубые и пёстроокрашенные особи. У самок 5 пар сосков.
        Половой диморфизм выражен слабо.
    </string>
    <string name="eventoed">
        <b>Парнокопытные</b> \n
        Парнокопытные - парафилетическая группа плацентарных млекопитающих.
        Насчитывает примерно 220 современных видов, из которых некоторые,
        особенно из семейства полорогих, имеют большое экономическое значение для человека.
        Название отряду дано за наличие у этих животных развитых
        третьего и четвёртого пальцев, окончания которых покрыты толстым роговым
        копытом, как футляром или башмаком. Второй и пятый пальцы недоразвиты,
        а первый — редуцирован. Животные в основном средние и крупные по величине.
        Живут в степях, лесостепях, пустынях, встречаются в лесах, заходят в тундру,
        поднимаются в горы. Морда парнокопытных удлинена, на голове у большинства из
        них имеются рога. Распространены по всем материкам, кроме Антарктиды,
        Австралии и Океании.
    </string>
    <string name="butterflies">
        <b>Бабочки</b> \n
        Чешуекрылые, или бабочки — отряд насекомых с полным превращением,
        наиболее характерная особенность представителей которого — наличие густого
        покрова хитиновых чешуек (уплощённых волосков) на передних и задних крыльях
        (при этом чешуйки расположены как на жилках, так и на крыловой пластинке между ними).
        Для большинства видов характерен специализированный сосущий ротовой аппарат
        с хоботком, образованным удлинёнными лопастями нижней челюсти.
        Форма и размах крыльев весьма разнообразны: от 2 мм до 28 см. Развитие — с полным
        превращением: имеются стадии яйца, личинки (называемой гусеницей), куколки и имаго.
        Личинка червеобразная, с недоразвитыми брюшными ногами, мощно склеротизованными
        покровами головы, грызущим ротовым аппаратом и парными шёлкоотделительными железами,
        выделения из которых, при соприкосновении с воздухом, образуют шёлковую нить.
        Чешуекрылые, ископаемые остатки которых известны начиная с юрского периода,
        в настоящее время являются одним из наиболее богатых видами отрядов насекомых — в отряде
        насчитывается более 158 000 видов. Представители отряда распространены на всех
        континентах, за исключением Антарктиды.
    </string>
</resources>