<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mushrooms"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/mushrooms" />
        <item
            android:id="@+id/nav_flowers"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/flowers" />
        <item
            android:id="@+id/nav_insects"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/insects" />
        <item
            android:id="@+id/nav_animals"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/animals" />
    </group>

   <item android:title="@string/others">
       <menu>
           <item
               android:id="@+id/nav_recipes"
               android:icon="@android:drawable/btn_star_big_on"
               android:title="@string/recipes" />
           <item
               android:id="@+id/nav_advice"
               android:icon="@android:drawable/ic_menu_info_details"
               android:title="@string/advice" />
       </menu>

   </item>
</menu>